--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_USER: postgres
-      # POSTGRES_PASSWORD: spinA@2024
     ports:
       - '5432:5432'
     healthcheck:
@@ -17,17 +16,33 @@ services:
       retries: 10
     volumes:
       - spina-postgres:/var/lib/postgresql/data
+      - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql
 
-  spina:
+  spina_dev:
     build:
       context: .
+      args:
+        ENVIRONMENT: development
     volumes:
       - ./spina:/opt/app
     depends_on:
       postgres:
         condition: service_healthy
     ports:
-      - '3000:3000'
+      - '3001:3000'
+
+  # spina_prod:
+  #   build:
+  #     context: .
+  #     args:
+  #       ENVIRONMENT: production
+  #   volumes:
+  #     - ./spina:/opt/app
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #   ports:
+  #     - '3000:3000'
 
 volumes:
   spina-postgres:
