Run rake succeful

--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,16 @@
-development:
-  <<: *default
+default: &default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   url: <%= ENV['DATABASE_URL'] %>
+development:
+  database: spina_development
+production:
+  database: spina_production
+
+# development:
+#   <<: *default
+#   url: <%= ENV['DATABASE_URL'] %>
   # ENTER THIS *EXACTLY* AS THIS, THIS READS THE VALUE OF THE DATABASE_URL environment variable programatically
 
   # adapter: postgresql
@@ -12,12 +22,12 @@ development:
   # host: 127.0.0.1
   # port: 5432
 
-production:
-  adapter: postgresql
-  encoding: unicode
-  database: spina_prod
-  pool: 5
-  username: postgres
-  password:
-  host: 127.0.0.1
-  port: 5432
+# production:
+#   adapter: postgresql
+#   encoding: unicode
+#   database: spina_prod
+#   pool: 5
+#   username: postgres
+#   password:
+#   host: 127.0.0.1
+#   port: 5432
