--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,31 +3,38 @@ version: "3.9"
 services:
 
   postgres:
-    image: postgres:15-alpine
+    image: postgres:13-alpine
+    restart: always
+    # command: echo -e "host all all all trust\\nlocal all all all trust" >> /var/lib/postgresql/data/pg_hba.conf
     environment:
       POSTGRES_HOST_AUTH_METHOD: trust
       POSTGRES_USER: postgres
+      # POSTGRES_PASSWORD: spinA@2024
     ports:
       - '5432:5432'
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
-      interval: 2s
-      timeout: 3s
-      retries: 10
+    # healthcheck:
+    #   test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+    #   interval: 2s
+    #   timeout: 3s
+    #   retries: 10
     volumes:
       - spina-postgres:/var/lib/postgresql/data
-      - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql
+      # - ./config/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   spina_dev:
     build:
       context: .
       args:
         ENVIRONMENT: development
+    environment:
+      DATABASE_URL: postgresql://postgres@postgres
     volumes:
       - ./spina:/opt/app
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
+      # postgres:
+      #   condition: service_healthy
+    command: puma
     ports:
       - '3001:3000'
 
