--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     build: .
     volumes:
       - ./:/app
+    environment:
+      DATABASE_URL: postgresql://postgres@postgres
     working_dir: /app
     command: puma
     ports:
