--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,31 +12,32 @@ services:
     volumes:
       - spina-postgres:/var/lib/postgresql/data
 
-  web_test:
-    build: .
-    volumes:
-      - ./:/app
-    environment:
-      DATABASE_URL: postgresql://postgres@postgres
-    working_dir: /app
-    command: puma
-    ports:
-      - 3010:3000
-
-  # spina_dev:
-  #   build:
-  #     context: .
-  #     args:
-  #       ENVIRONMENT: development
+  # web_test:
+  #   build: .
+  #   volumes:
+  #     - ./:/app
   #   environment:
   #     DATABASE_URL: postgresql://postgres@postgres
-  #   volumes:
-  #     - ./spina:/opt/app
-  #   depends_on:
-  #     - postgres
+  #   working_dir: /app
   #   command: puma
   #   ports:
-  #     - '3001:3000'
+  #     - 3010:3000
+
+  spina_dev:
+    build:
+      context: .
+      args:
+        ENVIRONMENT: development
+    environment:
+      DATABASE_URL: postgresql://postgres@postgres
+    volumes:
+      - ./:/app
+      # - ./spina:/opt/app
+    depends_on:
+      - postgres
+    # command: puma
+    ports:
+      - '3001:3000'
 
   # spina_prod:
   #   build:
