--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,8 +26,6 @@ services:
   spina_dev:
     build:
       context: .
-      args:
-        ENVIRONMENT: development
     environment:
       DATABASE_URL: postgresql://postgres@postgres
     volumes:
@@ -44,6 +42,7 @@ services:
       args:
         ENVIRONMENT: production
     environment:
+      # RAILS_ENV: production
       DATABASE_URL: postgresql://postgres@postgres
     volumes:
       - ./:/app
