Adjustments for Spina

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@
 
 config/*
 
-env-development
-env-production
+# Ignore auto-generated Spina Tailwind CSS configuration
+/app/assets/config/spina/tailwind.config.js
