--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   spina_dev:
     build:
       context: .
+      args:
+        ENVIRONMENT: development
     environment:
       DATABASE_URL: postgresql://postgres@postgres
     volumes:
