Remove config DIR from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,7 @@
 
 /public/assets
 
-config/*
+config/database.yml
 
 # Ignore auto-generated Spina Tailwind CSS configuration
 /app/assets/config/spina/tailwind.config.js
