--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       - spina_prod
     ports:
       - '3001:3000'
+    volumes:
+      - spina-dev:/app
 
   spina_prod:
     build:
@@ -36,6 +38,10 @@ services:
       - postgres
     ports:
       - '3000:3000'
+    volumes:
+      - spina-prod:/app
 
 volumes:
   spina-postgres:
+  spina-dev:
+  spina-prod:
